# omni

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/claude-cli/: Cargo.toml
crates/claude-cli/src/: main.rs
crates/claude-core/: Cargo.toml
crates/claude-core/src/: ansi_convert.rs  bootstrap.rs  compact.rs  coordinator.rs  cost_tracker.rs  deep_link.rs  features.rs  hooks.rs  lib.rs  migrations.rs  output_styles.rs  rate_limits.rs  session.rs  state.rs  upstream_proxy.rs  worktree.rs
crates/claude-core/src/api/: client.rs  retry.rs
crates/claude-core/src/assistant/: brief.rs  mod.rs  notifications.rs  tick.rs  types.rs
crates/claude-core/src/auth/: mod.rs  oauth_config.rs  pkce.rs  resolve.rs  storage.rs
crates/claude-core/src/bridge/: api.rs  capacity.rs  debug.rs  main_loop.rs  mod.rs  poll_config.rs  repl_bridge.rs  session.rs  trusted_device.rs
crates/claude-core/src/buddy/: companion.rs  mod.rs  prompt.rs  types.rs
crates/claude-core/src/commands/: add_dir.rs  agents.rs  brief.rs  btw.rs  chrome.rs  commit.rs  config.rs  context.rs  cost.rs  ctx_viz.rs  diff.rs  doctor.rs  env.rs  extra_usage.rs  fast.rs  files.rs  heapdump.rs  help.rs  hooks.rs  ide.rs  init.rs  insights.rs  install.rs  install_github_app.rs  install_slack_app.rs  keybindings.rs  login.rs  mcp.rs  memory.rs  mobile.rs  mod.rs  model.rs  output_style.rs  permissions.rs  plan.rs  pr_comments.rs  privacy_settings.rs  quit.rs  release_notes.rs  reload_plugins.rs  (+18 more)
crates/claude-core/src/config/: paths.rs  settings.rs
crates/claude-core/src/context/: environment.rs  git.rs  mod.rs  system_prompt.rs
crates/claude-core/src/hooks/: config.rs  events.rs  matching.rs  registry.rs  watcher.rs
crates/claude-core/src/ide/: integration.rs  protocol.rs  types.rs
crates/claude-core/src/mcp/: auth.rs  client.rs  config.rs  manager.rs  mod.rs  permissions.rs  transport.rs  types.rs
crates/claude-core/src/memdir/: age.rs  core.rs  memdir.rs  memory_types.rs  mod.rs  paths.rs  relevance.rs  scan.rs  team_mem.rs
crates/claude-core/src/permissions/: auto_mode.rs  bash_classifier.rs  classifier.rs  dangerous_patterns.rs  evaluator.rs  mod.rs  permission_explainer.rs  rule_parser.rs  shadow_detection.rs  shell_matching.rs  types.rs
crates/claude-core/src/plugins/: loader.rs  mod.rs
crates/claude-core/src/query/: engine.rs  hooks.rs  mod.rs  token_budget.rs  tool_executor.rs  tracking.rs
crates/claude-core/src/remote/: types.rs
crates/claude-core/src/services/: agent_summary.rs  auto_dream.rs  auto_updater.rs  away_summary.rs  diagnostics.rs  extract_memories.rs  magic_docs.rs  mod.rs  notifications.rs  prevent_sleep.rs  release_notes.rs  settings_sync.rs  team_memory_sync.rs
crates/claude-core/src/skills/: loader.rs  mod.rs  registry.rs
crates/claude-core/src/tasks/: manager.rs  mod.rs  types.rs
crates/claude-core/src/teleport/: api.rs  git_bundle.rs  mod.rs
crates/claude-core/src/types/: content.rs  message.rs  mod.rs
crates/claude-core/src/utils/: git.rs  model.rs  tokens.rs
crates/claude-core/src/voice/: stt.rs
crates/claude-core/tests/: accumulator_test.rs  api_client_test.rs  auth_test.rs  config_test.rs  context_test.rs  events_test.rs  normalize_test.rs  permissions_test.rs  query_engine_test.rs  retry_test.rs  sse_test.rs  tool_executor_test.rs  types_test.rs
crates/claude-tools/: Cargo.toml
crates/claude-tools/src/: agent_tool.rs  ask_user.rs  bash.rs  bash_permissions.rs  bash_security.rs  brief_tool.rs  config_tool.rs  edit.rs  glob_tool.rs  grep.rs  lib.rs  lsp_tool.rs  mcp_auth.rs  mcp_resources.rs  mcp_tool.rs  notebook_edit.rs  plan_mode.rs  powershell_tool.rs  read.rs  registry.rs  remote_trigger.rs  repl_tool.rs  schedule_cron.rs  send_message.rs  skill_tool.rs  sleep_tool.rs  synthetic_output.rs  task_tools.rs  team_tools.rs  todo_write.rs  tool_search.rs  web_fetch.rs  web_search.rs  worktree_tools.rs  write.rs
crates/claude-tools/tests/: bash_test.rs  build_test.rs  edit_test.rs  glob_test.rs  grep_test.rs  read_test.rs  registry_test.rs  write_test.rs
crates/claude-tui/: Cargo.toml
crates/claude-tui/src/: app.rs  layout.rs  markdown.rs  mouse.rs  syntax.rs  theme.rs
crates/claude-tui/src/app/: engine_loop.rs  event_handler.rs  mod.rs  renderer.rs
crates/claude-tui/src/input/: mod.rs  vim.rs
crates/claude-tui/src/keybindings/: mod.rs  user_bindings.rs
crates/claude-tui/src/widgets/: agent_status.rs  context_panel.rs  login_dialog.rs  message_list.rs  mod.rs  notification.rs  permission_dialog.rs  picker.rs  profile_manager.rs  prompt_input.rs  search_overlay.rs  spinner.rs  status_bar.rs  (+2 more)
crates/claude-tui/tests/: message_list_test.rs  prompt_input_test.rs  tui_test.rs
crates/omni-cli/: Cargo.toml
crates/omni-cli/src/: main.rs
crates/omni-cli/tests/: cli_test.rs
crates/omni-core/: Cargo.toml
crates/omni-core/src/: bootstrap.rs  compact.rs  coordinator.rs  deep_link.rs  features.rs  lib.rs  worktree.rs
crates/omni-core/tests/: accumulator_test.rs  api_client_test.rs  auth_test.rs  config_test.rs  context_test.rs  events_test.rs  normalize_test.rs  permissions_test.rs  query_engine_test.rs  retry_test.rs  sse_test.rs  tool_executor_test.rs  types_test.rs
crates/omni-tools/: Cargo.toml
crates/omni-tools/src/: agent_tool.rs  ask_user.rs  bash.rs  brief_tool.rs  config_tool.rs  edit.rs  glob_tool.rs  grep.rs  lib.rs  lsp_tool.rs  mcp_auth.rs  mcp_resources.rs  mcp_tool.rs  notebook_edit.rs  plan_mode.rs  powershell_tool.rs  read.rs  registry.rs  remote_trigger.rs  repl_tool.rs  schedule_cron.rs  send_message.rs  skill_tool.rs  sleep_tool.rs  synthetic_output.rs  task_tools.rs  team_tools.rs  todo_write.rs  tool_search.rs  web_fetch.rs  web_search.rs  worktree_tools.rs  write.rs
crates/omni-tools/tests/: bash_test.rs  build_test.rs  edit_test.rs  glob_test.rs  grep_test.rs  read_test.rs  registry_test.rs  write_test.rs
crates/omni-tui/: Cargo.toml
crates/omni-tui/src/: audio_capture.rs  layout.rs  lib.rs  markdown.rs  mouse.rs  unicode_width.rs
crates/omni-tui/tests/: message_list_test.rs  prompt_input_test.rs  tui_test.rs
(+154 files in other folders)
