[package]
name = "claude-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "omni"
path = "src/main.rs"

[dependencies]
claude-core = { path = "../claude-core" }
claude-tools = { path = "../claude-tools" }
claude-tui = { path = "../claude-tui" }
tokio.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde_json.workspace = true
uuid.workspace = true
hostname = "0.4"
chrono.workspace = true
