[package]
name = "claude-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "omni"
path = "src/main.rs"

[dependencies]
claude-core = { path = "../claude-core" }
claude-tools = { path = "../claude-tools" }
claude-tui = { path = "../claude-tui" }
tokio.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde_json.workspace = true
uuid.workspace = true
hostname = "0.4"
chrono.workspace = true

[features]
default = ["claude-core/default", "claude-tools/default", "claude-tui/default"]
bridge = ["claude-core/bridge", "claude-tools/bridge", "claude-tui/bridge"]
voice = ["claude-core/voice", "claude-tools/voice", "claude-tui/voice"]
coordinator = ["claude-core/coordinator", "claude-tools/coordinator", "claude-tui/coordinator"]
buddy = ["claude-core/buddy", "claude-tools/buddy", "claude-tui/buddy"]
kairos = ["claude-core/kairos", "claude-tools/kairos", "claude-tui/kairos"]
computer-use = ["claude-core/computer-use", "claude-tools/computer-use", "claude-tui/computer-use"]
