[package]
name = "claude-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
tracing.workspace = true
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
dirs = "6"
glob = "0.3"
hex = "0.4"
url = "2"
which = "7"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
lazy-regex = "3"
libc = "0.2"
regex = "1.12.3"
once_cell = "1"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = "0.5"

[features]
default = ["bridge", "voice", "coordinator"]
bridge = []
voice = []
coordinator = []
buddy = []
kairos = []
computer-use = []

[dev-dependencies]
tempfile = "3"
