[package]
name = "claude-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
claude-core = { path = "../claude-core" }
claude-tools = { path = "../claude-tools" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio-util = { version = "0.7", features = ["rt"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-onig"] }
unicode-width = "0.2"
unicode-segmentation = "1"
htmlescape = "0.3"
copypasta = { version = "0.10", default-features = false, features = ["wayland", "x11"] }
tempfile = "3"

[features]
default = ["claude-core/default"]
bridge = ["claude-core/bridge"]
voice = ["claude-core/voice"]
coordinator = ["claude-core/coordinator"]
buddy = ["claude-core/buddy"]
kairos = ["claude-core/kairos"]
computer-use = ["claude-core/computer-use"]

[dev-dependencies]
tempfile = "3"
