[package]
name = "omni-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "omni"
path = "src/main.rs"

[dependencies]
omni-core = { path = "../omni-core" }
omni-tools = { path = "../omni-tools" }
omni-tui = { path = "../omni-tui" }
tokio.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde_json.workspace = true
uuid.workspace = true
hostname = "0.4"
chrono.workspace = true

