[package]
name = "omni-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
tracing.workspace = true
sha2 = "0.11"
base64 = "0.22"
rand = "0.10"
tokio-util = { version = "0.7", features = ["rt"] }
bytes = "1"
futures-util = "0.3"
dirs = "6"
glob = "0.3"
hex = "0.4"
url = "2"
which = "8"
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
lazy-regex = "3"
libc = "0.2"
regex = "1"
once_cell = "1"
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = "0.7"
vosk = { version = "0.3", optional = true }
sherpa-rs = { version = "0.6", optional = true }

[features]
voice-vosk = ["dep:vosk"]
voice-sherpa = ["dep:sherpa-rs"]

[dev-dependencies]
tempfile = "3"
